--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "httpdispatcher": "^2.1.2",
-    "jquery": "^3.5.1"
+    "httpdispatcher": "^2.1.2"
   }
 }
